[package]
name = "gossip-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.36", features = ["full"] }
tokio-util = { version = "^0.7.10", features = ["compat"] }
rand = "0.8.5"
clap = { version = "4.5.1", features = ["derive"] }
